--- a/stable/home-assistant/templates/deployment.yaml
+++ b/stable/home-assistant/templates/deployment.yaml
@@ -72,6 +72,7 @@ spec:
         {{- end }}
         {{- end }}
       {{- end }}
+      {{- toYaml .Values.extraInitContainers | nindent 6 }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
