--- a/stable/home-assistant/values.yaml
+++ b/stable/home-assistant/values.yaml
@@ -285,3 +285,5 @@ extraVolumes: []
 extraVolumeMounts: []
 #   - name: example-name
 #     mountPath: /path/in/container
+
+extraInitContainers: []
